--- a/app/assets/stylesheets/schedules.scss
+++ b/app/assets/stylesheets/schedules.scss
@@ -1,3 +1,9 @@
-// Place all the styles related to the schedules controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.schedule-event {
+  border-style: solid;
+  &.even {
+    background-color: cornflowerblue;
+  }
+  &.odd {
+    background-color: cadetblue;
+  }
+}
