--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -4,7 +4,7 @@
   <h1>New Schedule</h1>
 </div>
 
-<%= render 'schedule_form', schedule: @schedule %>
+<%= render 'schedule_form', schedule: @schedule, repeat_every_list: @repeat_every_list %>
 
 <hr/>
 
