Fix schedule event creation

--- a/app/views/schedules/_schedule_event_form.html.erb
+++ b/app/views/schedules/_schedule_event_form.html.erb
@@ -25,7 +25,7 @@
     <div class="row">
       <div class="col-xs-4">
         <div class="form-group">
-          <span><%= (schedule_event && schedule_event.device) ? schedule_event.device.name : '' %></span>
+          <span class="schedule-event-device-name-placeholder"><%= (schedule_event && schedule_event.device) ? schedule_event.device.name : '' %></span>
         </div>
       </div>
       <div class="col-xs-4">
