--- a/app/views/schedules/_schedule_modal.html.erb
+++ b/app/views/schedules/_schedule_modal.html.erb
@@ -9,7 +9,7 @@
       </div>
 
       <div class="modal-body">
-        <%= render 'schedule_form', schedule: schedule %>
+        <%= render 'schedule_form', schedule: schedule, repeat_every_list: @repeat_every_list %>
       </div>
 
       <div class="modal-footer">
