--- a/app/views/actions/_action_form.erb
+++ b/app/views/actions/_action_form.erb
@@ -4,19 +4,25 @@
 
     <div class="row">
 
-      <div class="col-xs-5">
+      <div class="col-xs-3">
         <div class="form-group">
-          <%= label(Action, :attribute_id, 'Attribute') %>
+          <%= label(Action, :attribute_id, 'Attribute Name') %>
         </div>
       </div>
 
       <div class="col-xs-5">
         <div class="form-group">
-          <%= label(Action, :attribute_value, 'Attribute Value') %>
+          <%= label(Action, :attribute_value, 'Attribute Start Value') %>
         </div>
       </div>
 
-      <div class="col-xs-2">
+      <div class="col-xs-3">
+        <div class="form-group">
+          <%= label(Action, :attribute_value, 'Attribute End Value') %>
+        </div>
+      </div>
+
+      <div class="col-xs-3">
         <div class="form-group">
           <label>Action</label>
         </div>
