--- a/app/views/actions/_action_form_element.erb
+++ b/app/views/actions/_action_form_element.erb
@@ -21,20 +21,26 @@
 
     <div class="row">
 
-      <div class="col-xs-5">
+      <div class="col-xs-3">
         <div class="form-group">
           <% selected_dev_attr = (action && action.device_attribute) ? [[action.device_attribute.name, action.device_attribute_id]] : [] %>
           <%= action_form.select(:device_attribute_id, selected_dev_attr, {}, { class: 'form-control' }) %>
         </div>
       </div>
 
-      <div class="col-xs-5">
+      <div class="col-xs-3">
         <div class="form-group">
-          <%= action_form.text_field :device_attribute_value, class: 'form-control action-device-attribute-value' %>
+          <%= action_form.text_field :device_attribute_start_value, class: 'form-control action-device-attribute-start-value' %>
         </div>
       </div>
 
-      <div class="col-xs-2">
+      <div class="col-xs-3">
+        <div class="form-group">
+          <%= action_form.text_field :device_attribute_end_value, class: 'form-control action-device-attribute-end-value' %>
+        </div>
+      </div>
+
+      <div class="col-xs-3">
         <div class="form-group">
           <input type="button" class="action-button active remove-form-row form-control" value="X"/>
         </div>
