--- a/app/views/devices/_device_form.html.erb
+++ b/app/views/devices/_device_form.html.erb
@@ -2,6 +2,8 @@
 
   <%= form_for(device, html: { id: 'device-form' }) do |device_form| %>
 
+    <%= device.errors.inspect %>
+
     <% if device.errors.any? %>
       <div id="error-explanation">
         <h2><%= pluralize(device.errors.count, 'error') %> prohibited this
