--- a/app/views/actions/_action_form.erb
+++ b/app/views/actions/_action_form.erb
@@ -6,19 +6,19 @@
 
       <div class="col-xs-3">
         <div class="form-group">
-          <%= label(Action, :attribute_id, 'Attribute Name') %>
-        </div>
-      </div>
-
-      <div class="col-xs-5">
-        <div class="form-group">
-          <%= label(Action, :attribute_value, 'Attribute Start Value') %>
+          <%= label(Action, :device_attribute_id) %>
         </div>
       </div>
 
       <div class="col-xs-3">
         <div class="form-group">
-          <%= label(Action, :attribute_value, 'Attribute End Value') %>
+          <%= label(Action, :device_attribute_start_value) %>
+        </div>
+      </div>
+
+      <div class="col-xs-3">
+        <div class="form-group">
+          <%= label(Action, :device_attribute_end_value) %>
         </div>
       </div>
 
