--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -1,41 +1,32 @@
 <% provide(:title, 'Schedule Preview') %>
 
 <div class="well">
-  <h1>Overview</h1>
-  <h1>
-    <small><%= @schedule.device.name %></small>
-  </h1>
+  <h1>Schedule Overview</h1>
+  <h1><%= @schedule.title %></h1>
+  <h3><%= @schedule.description %></h3>
+  <h4><%= @schedule.start_datetime %> - <%= @schedule.end_datetime %></h4>
 </div>
 
-<!-- ACTIONS -->
-<% if @schedule.actions.any? %>
-  <div class="panel panel-default">
+<!--EVENTS -->
+<h3>Events</h3>
+<% if @schedule.schedule_events.any? %>
 
-    <div class="panel-heading">
-      <h3 class="panel-title">Actions</h3>
+  <% @schedule.schedule_events.each do |schedule_event| %>
+    <div class="panel panel-default">
+
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= schedule_event.device.name %></h3>
+      </div>
+
+      <div class="panel-body">
+        <% schedule_event.actions.each do |action| %>
+          <%= action.inspect %> <br>
+        <% end %>
+      </div>
     </div>
+  <% end %>
 
-    <div class="panel-body">
-
-      <% @schedule.actions.each do |action| %>
-        <div class="row">
-
-          <div class="col-xs-4">
-            <%= action.device_attribute.name %>
-          </div>
-
-          <div class="col-xs-4">
-            <%= action.device_attribute_value %>
-          </div>
-
-        </div>
-      <% end %>
-
-    </div>
-
-  </div>
 <% end %>
-
 
 <%= link_to 'Edit', edit_schedule_path(@schedule) %> |
 <%= link_to 'Back', schedules_path %>
