Load schedule data for edit

--- a/app/views/schedules/_schedule_modal.html.erb
+++ b/app/views/schedules/_schedule_modal.html.erb
@@ -1,5 +1,5 @@
 <div class="modal fade" id="schedule-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
 
       <div class="modal-header">
@@ -9,7 +9,7 @@
       </div>
 
       <div class="modal-body">
-        <%= render 'schedule_form', schedule: schedule, repeat_every_list: @repeat_every_list %>
+        <%= render 'schedule_form', schedule: schedule, repeat_every_list: repeat_every_list %>
       </div>
 
       <div class="modal-footer">
