--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -4,7 +4,7 @@
   <h1>Schedules</h1>
 </div>
 
-<% render 'schedule_modal', schedule: @schedule, repeat_every_list: @repeat_every_list %>
+<%= render 'schedule_modal', schedule: @schedule, repeat_every_list: @repeat_every_list %>
 
 <div class="row">
   <div class="col-xs-4"><b>Title</b></div>
