--- a/app/views/actions/_action_form_element.erb
+++ b/app/views/actions/_action_form_element.erb
@@ -17,32 +17,26 @@
       </div>
     <% end %>
 
-    <%= action_form.hidden_field :id %>
-    <%= action_form.hidden_field :device_attribute_id, class: 'action-device-attributee-id' %>
+    <%= action_form.hidden_field :id, class: 'action-id' %>
+    <%= action_form.hidden_field :device_attribute_id, class: 'action-device-attribute-id' %>
 
     <div class="row">
 
-      <div class="col-xs-3">
+      <div class="col-xs-4">
         <div class="form-group">
           <span class="schedule-event-action-device-attribute-name-placeholder"><%= (action && action.device_attribute) ? action.device_attribute.name : '' %></span>
         </div>
       </div>
 
-      <div class="col-xs-3">
+      <div class="col-xs-4">
         <div class="form-group">
           <%= action_form.text_field :device_attribute_start_value, class: 'form-control action-device-attribute-start-value' %>
         </div>
       </div>
 
-      <div class="col-xs-3">
+      <div class="col-xs-4">
         <div class="form-group">
           <%= action_form.text_field :device_attribute_end_value, class: 'form-control action-device-attribute-end-value' %>
-        </div>
-      </div>
-
-      <div class="col-xs-3">
-        <div class="form-group">
-          <input type="button" class="action-button active remove-form-row form-control" value="X"/>
         </div>
       </div>
 
