--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -181,14 +181,20 @@
   </div>
 <% end %>
 
-<!-- DEVICE'S SCHEDULES -->
-<!--<div class="panel panel-default">-->
-<!--<div class="panel-heading">-->
-<!--<h3 class="panel-title">Device's schedules</h3>-->
-<!--</div>-->
-<!--<div class="panel-body">-->
-<!--</div>-->
-<!--</div>-->
+<!--DEVICE'S SCHEDULES-->
+<% if @device.schedule_events.any? %>
+  <div class="panel panel-default">
+
+    <div class="panel-heading">
+      <h3 class="panel-title">Device's schedules</h3>
+    </div>
+
+    <div class="panel-body">
+      <%= @device.schedule_events.inspect %>
+    </div>
+
+  </div>
+<% end %>
 
 <%= link_to 'Edit', edit_device_path(@device) %> |
 <%= link_to 'Back', devices_path %>
