--- a/app/views/schedules/_schedule_event_form.html.erb
+++ b/app/views/schedules/_schedule_event_form.html.erb
@@ -8,8 +8,6 @@
 
   <%= fields_for current_form_prefix, schedule_event, index: schedule_event_index do |schedule_event_form| %>
 
-    <%= schedule_event.errors.inspect %>
-
     <% if schedule_event.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(schedule_event.errors.count, 'error') %> prohibited
@@ -31,19 +29,12 @@
           <span class="schedule-event-device-name-placeholder"><%= (schedule_event && schedule_event.device) ? schedule_event.device.name : '' %></span>
         </div>
       </div>
+      <div class="col-xs-4"></div>
       <div class="col-xs-4">
         <div class="form-group">
           <button type="button" class="action-button active remove-form-row form-control">
             <span class="glyphicon glyphicon-remove"></span>
             Remove event
-          </button>
-        </div>
-      </div>
-      <div class="col-xs-4">
-        <div class="form-group">
-          <button type="button" class="action-button active add-schedule-event-action form-control">
-            <span class="glyphicon glyphicon-plus"></span>
-            Add event action
           </button>
         </div>
       </div>
