--- a/app/views/schedules/_schedule_modal.html.erb
+++ b/app/views/schedules/_schedule_modal.html.erb
@@ -13,7 +13,7 @@
       </div>
 
       <div class="modal-footer">
-        <%= button_to 'Delete', schedule, :method => :delete %>
+        <%= button_to 'Delete', schedule, :method => :delete, class: 'btn' %>
         <button type="button" class="btn" data-dismiss="modal">Close</button>
         <button type="button" class="action-button active save-schedule btn">
           Save changes
