[Ckeckpoint] Fixing modal load values

--- a/app/views/schedules/_schedule_event_form.html.erb
+++ b/app/views/schedules/_schedule_event_form.html.erb
@@ -20,7 +20,7 @@
       </div>
     <% end %>
 
-    <%= schedule_event_form.hidden_field :id %>
+    <%= schedule_event_form.hidden_field(:id, { class: 'schedule-event-id' }) %>
     <%= schedule_event_form.hidden_field(:device_uid, { class: 'schedule-event-device-uid' }) %>
 
     <div class="row">
