--- a/app/views/schedules/_schedule_modal.html.erb
+++ b/app/views/schedules/_schedule_modal.html.erb
@@ -13,10 +13,10 @@
       </div>
 
       <div class="modal-footer">
-        <%= button_to 'Delete', schedule, :method => :delete, class: 'btn' %>
+        <%= button_to 'Delete', schedule, :method => :delete, form_class: 'btn', class: 'btn' %>
         <button type="button" class="btn" data-dismiss="modal">Close</button>
-        <button type="button" class="action-button active save-schedule btn">
-          Save changes
+        <button type="button" class="action-button active save-schedule btn">Save
+          changes
         </button>
       </div>
 
