Fix schedule delete & update

--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -5,6 +5,7 @@
       id:                'schedule-form',
       'data-create-url': schedules_url,
       'data-update-url': schedule_url('SCHEDULE_ID'),
+      'data-delete-url': schedule_url('SCHEDULE_ID'),
   }
 %>
 
