--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -28,7 +28,7 @@
     <%= schedule_form.hidden_field :id %>
 
     <div class="row">
-      <div class="col-xs-6">
+      <div class="col-xs-4">
         <div class="form-group">
           <%= schedule_form.label :title %>
           <%= schedule_form.text_field :title, class: 'form-control' %>
@@ -38,6 +38,12 @@
         <div class="form-group">
           <%= schedule_form.label :description %>
           <%= schedule_form.text_field :description, class: 'form-control' %>
+        </div>
+      </div>
+      <div class="col-xs-2">
+        <div class="form-group">
+          <%= schedule_form.label :priority %>
+          <%= schedule_form.text_field :priority, class: 'form-control' %>
         </div>
       </div>
     </div>
@@ -95,8 +101,8 @@
 
     <hr>
 
-    <div id="ovelapping-schedules-container">
-      <span>overlap schedules</span>
+    <div id="ovelapping-schedules-container" class="hidden">
+      <h3>Overlapping Schedules</h3>
       <div class="ovelapping-schedules-header">
         <div class="row">
           <div class="col-xs-3">
@@ -123,9 +129,12 @@
       </div>
       <div class="ovelapping-schedules-list">
       </div>
-    </div>
 
-    <hr>
+      <button type="button" class="btn">Update Priorities</button>
+
+      <hr>
+
+    </div>
 
     <div id="add-new-event-to-schedule-container">
       <div class="row">
