--- a/app/views/schedules/_schedule_modal.html.erb
+++ b/app/views/schedules/_schedule_modal.html.erb
@@ -1,11 +1,11 @@
-<div class="modal fade" id="schedule-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="schedule-modal" tabindex="-1" role="dialog" aria-labelledby="schedule-modal-label">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
 
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        <h4 class="modal-title" id="schedule-modal-label">Schedule Settings</h4>
       </div>
 
       <div class="modal-body">
