--- a/app/views/admin/_value_type_form_element.html.erb
+++ b/app/views/admin/_value_type_form_element.html.erb
@@ -4,7 +4,7 @@
 <div class="form-row">
 
   <% if value_type.errors.any? %>
-    <div id="error-explanation">
+    <div id="errors-explanation">
       <h2><%= pluralize(value_type.errors.count, 'error') %> prohibited this
         value type from being valid:</h2>
       <ul>
