--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -17,7 +17,7 @@
   <%= form_for(schedule, html: form_options) do |schedule_form| %>
 
     <% if schedule.errors.any? %>
-      <div id="error-explanation">
+      <div id="errors-explanation">
         <h2><%= pluralize(schedule.errors.count, 'error') %> prohibited this
           schedule from being saved:</h2>
         <ul>
