--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Device Manager", root_path, class: "navbar-brand" %>
+        <%= link_to 'Device Manager', root_path, class: 'navbar-brand' %>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="main-system-navbar-collapse">
@@ -18,20 +18,19 @@
             <li><a href="<%= devices_path %>">Devices</a></li>
             <li><a href="<%= schedules_path %>">Schedules</a></li>
             <li><a href="#">Quick Buttons</a></li>
-            <li><a href="<%= admin_path %>">Admin</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 <span>Account</span>
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to "My Profile", edit_user_registration_path %></li>
+                <li><%= link_to 'My Profile', edit_user_registration_path %></li>
                 <li role="separator" class="divider"></li>
-                <li><%= link_to "Sign out (" + current_user.email + ")", destroy_user_session_path, method: "delete" %></li>
+                <li><%= link_to 'Sign out (' + current_user.email + ')', destroy_user_session_path, method: 'delete' %></li>
               </ul>
             </li>
           <% else %>
-            <li><%= link_to "Sign in", user_session_path %></li>
+            <li><%= link_to 'Sign in', user_session_path %></li>
           <% end %>
         </ul>
       </div>
