--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -25,9 +25,6 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">Device Attributes</h3>
-      <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
-      </button>
     </div>
     <div class="panel-body">
 
@@ -40,7 +37,7 @@
 
         <div class="col-xs-2">
           <div class="form-group">
-            <%= label DeviceAttribute, :value_type_id %>
+            <%= label DeviceAttribute, :primitive_type_c_id %>
           </div>
         </div>
 
@@ -81,6 +78,12 @@
 
           <div class="col-xs-2">
             <div class="form-group">
+              <% DeviceAttribute::PRIMITIVE_TYPES.each do |key, value| %>
+                <% if value[:ID] == device_attribute.primitive_type_c_id %>
+                  <%= value[:LABEL] %>
+                  <% break %>
+                <% end %>
+              <% end %>
             </div>
           </div>
 
@@ -98,16 +101,20 @@
 
           <div class="col-xs-2">
             <div class="form-group">
-              <% params = ActiveSupport::JSON.encode({ device_uid: device_attribute.device_uid.to_s }) %>
-              <a href="#" class="editable-device-attribute-set-value" data-params="<%= params %>" data-pk="<%= device_attribute.id %>" data-name="set_value" data-url="<%= url_for(action: 'update_device_attribute_value', controller: '/devices') %>">
-                <%= device_attribute.set_value.nil? ? '-' : device_attribute.set_value %>
-              </a>
+              <% if (device_attribute.direction_c_id == DeviceAttribute::DIRECTIONS[:SIGNALING_AND_FEEDBACK][:ID]) || (device_attribute.direction_c_id == DeviceAttribute::DIRECTIONS[:SIGNALING_ONLY][:ID]) %>
+                <% params = ActiveSupport::JSON.encode({ device_uid: device_attribute.device_uid.to_s }) %>
+                <a href="#" class="editable-device-attribute-set-value" data-params="<%= params %>" data-pk="<%= device_attribute.id %>" data-name="set_value" data-url="<%= url_for(action: 'update_device_attribute_value', controller: '/devices') %>">
+                  <%= device_attribute.set_value.nil? ? '-' : device_attribute.set_value %>
+                </a>
+              <% else %>
+                -
+              <% end %>
             </div>
           </div>
 
           <div class="col-xs-2">
             <div class="form-group">
-              <%= device_attribute.current_value.nil? ? '-' : device_attribute.current_value %>
+              <%= device_attribute.current_value.nil? ? '-' : device_attribute.current_value + ' ' + device_attribute.unit %>
             </div>
           </div>
 
