--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,10 +22,8 @@
 
   <div>
     <%= debug(I18n.t('hello')) if Rails.env.development? %>
-    <%= debug(Time.new.zone) if Rails.env.development? %>
+    <%= debug(Time.new) if Rails.env.development? %>
     <%= debug(RUBY_VERSION) if Rails.env.development? %>
-    <%= debug(user_signed_in?.inspect) if Rails.env.development? %>
-    <%= debug(current_user.devices.inspect) if user_signed_in? if Rails.env.development? %>
     <%= debug(user_session.inspect) if Rails.env.development? %>
     <%= debug(instance_variables) if Rails.env.development? %>
     <%= debug(local_variables) if Rails.env.development? %>
