--- a/app/views/actions/_action_form.erb
+++ b/app/views/actions/_action_form.erb
@@ -4,19 +4,19 @@
 
     <div class="row">
 
-      <div class="col-xs-4">
+      <div class="col-sm-4">
         <div class="form-group">
           <%= label(Action, :device_attribute_id) %>
         </div>
       </div>
 
-      <div class="col-xs-4">
+      <div class="col-sm-4">
         <div class="form-group">
           <%= label(Action, :device_attribute_start_value) %>
         </div>
       </div>
 
-      <div class="col-xs-4">
+      <div class="col-sm-4">
         <div class="form-group">
           <%= label(Action, :device_attribute_end_value) %>
         </div>
