--- a/app/views/devices/_device_attribute_form_element.html.erb
+++ b/app/views/devices/_device_attribute_form_element.html.erb
@@ -21,13 +21,13 @@
 
     <div class="row">
 
-      <div class="col-xs-2">
+      <div class="col-sm-2">
         <div class="form-group">
           <%= device_attribute_form.text_field :name, class: 'form-control' %>
         </div>
       </div>
 
-      <div class="col-xs-2">
+      <div class="col-sm-2">
         <div class="form-group">
           <%= device_attribute_form.select(:direction_c_id, {}, {}, { class: 'form-control' }) do %>
             <% options_for_select(@directions, device_attribute.direction_c_id) %>
@@ -35,7 +35,7 @@
         </div>
       </div>
 
-      <div class="col-xs-2">
+      <div class="col-sm-2">
         <div class="form-group">
           <%= device_attribute_form.select(:primitive_type_c_id, {}, {}, { class: 'form-control' }) do %>
             <% options_for_select(@primitive_types, device_attribute.primitive_type_c_id) %>
@@ -43,35 +43,35 @@
         </div>
       </div>
 
-      <div class="col-xs-1">
+      <div class="col-sm-1">
         <%= device_attribute_form.check_box :unsigned %>
       </div>
 
-      <div class="col-xs-1">
+      <div class="col-sm-1">
         <div class="form-group">
           <%= device_attribute_form.text_field(:min_value, class: 'form-control') %>
         </div>
       </div>
 
-      <div class="col-xs-1">
+      <div class="col-sm-1">
         <div class="form-group">
           <%= device_attribute_form.text_field :max_value, class: 'form-control' %>
         </div>
       </div>
 
-      <div class="col-xs-1">
+      <div class="col-sm-1">
         <div class="form-group">
           <%= device_attribute_form.text_field :set_value, class: 'form-control' %>
         </div>
       </div>
 
-      <div class="col-xs-1">
+      <div class="col-sm-1">
         <div class="form-group">
           <%= device_attribute_form.text_field :unit, class: 'form-control' %>
         </div>
       </div>
 
-      <div class="col-xs-1">
+      <div class="col-sm-1">
         <div class="form-group">
           <input type="button" class="action-button active remove-form-row form-control" value="X"/>
         </div>
