--- a/app/views/devices/_device_attribute_form.html.erb
+++ b/app/views/devices/_device_attribute_form.html.erb
@@ -2,55 +2,55 @@
 
   <div class="row">
 
-    <div class="col-xs-2">
+    <div class="col-sm-2">
       <div class="form-group">
         <%= label DeviceAttribute, :name, 'Prop Name' %>
       </div>
     </div>
 
-    <div class="col-xs-2">
+    <div class="col-sm-2">
       <div class="form-group">
         <%= label DeviceAttribute, :direction_c_id %>
       </div>
     </div>
 
-    <div class="col-xs-2">
+    <div class="col-sm-2">
       <div class="form-group">
         <%= label DeviceAttribute, :primitive_type_c_id %>
       </div>
     </div>
 
-    <div class="col-xs-1">
+    <div class="col-sm-1">
       <div class="form-group">
         <%= label DeviceAttribute, :unsigned %>
       </div>
     </div>
 
-    <div class="col-xs-1">
+    <div class="col-sm-1">
       <div class="form-group">
         <%= label DeviceAttribute, :min_value %>
       </div>
     </div>
 
-    <div class="col-xs-1">
+    <div class="col-sm-1">
       <div class="form-group">
         <%= label DeviceAttribute, :max_value %>
       </div>
     </div>
 
-    <div class="col-xs-1">
+    <div class="col-sm-1">
       <div class="form-group">
         <%= label DeviceAttribute, :set_value %>
       </div>
     </div>
 
-    <div class="col-xs-1">
+    <div class="col-sm-1">
       <div class="form-group">
         <%= label DeviceAttribute, :unit %>
       </div>
     </div>
 
-    <div class="col-xs-1">
+    <div class="col-sm-1">
       <div class="form-group">
         <label>Action</label>
       </div>
