--- a/app/views/devices/_device_form.html.erb
+++ b/app/views/devices/_device_form.html.erb
@@ -16,14 +16,14 @@
 
     <div class="row">
 
-      <div class="col-xs-6">
+      <div class="col-sm-6">
         <div class="form-group">
           <%= device_form.label :name %>
           <%= device_form.text_field :name, class: 'form-control' %>
         </div>
       </div>
 
-      <div class="col-xs-6">
+      <div class="col-sm-6">
         <div class="form-group">
           <%= device_form.label :location %>
           <%= device_form.text_field :location, class: 'form-control' %>
@@ -33,7 +33,7 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-sm-12">
         <div class="form-group">
           <%= device_form.label :description %>
           <%= device_form.text_area :description, class: 'form-control' %>
@@ -44,15 +44,15 @@
     <hr/>
 
     <div class="row">
-      <div class="col-xs-3"></div>
-      <div class="col-xs-6">
+      <div class="col-sm-3"></div>
+      <div class="col-sm-6">
         <div class="form-group">
           <button type="button" class="action-button active add-new-device-attribute form-control">
             <span>Add Device Attribute</span>
           </button>
         </div>
       </div>
-      <div class="col-xs-3"></div>
+      <div class="col-sm-3"></div>
     </div>
 
     <%= render partial: 'device_attribute_form', locals: { device_attributes: device.device_attributes } %>
