--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -36,37 +36,37 @@
 
       <div id="device-attributes-header">
         <div class="row">
-          <div class="col-xs-2">
+          <div class="col-sm-2">
             <div class="form-group">
               <%= label DeviceAttribute, :name, 'Prop Name' %>
             </div>
           </div>
 
-          <div class="col-xs-2">
+          <div class="col-sm-2">
             <div class="form-group">
               <%= label DeviceAttribute, :primitive_type_c_id %>
             </div>
           </div>
 
-          <div class="col-xs-2">
+          <div class="col-sm-2">
             <div class="form-group">
               <%= label DeviceAttribute, :min_value %>
             </div>
           </div>
 
-          <div class="col-xs-2">
+          <div class="col-sm-2">
             <div class="form-group">
               <%= label DeviceAttribute, :max_value %>
             </div>
           </div>
 
-          <div class="col-xs-2">
+          <div class="col-sm-2">
             <div class="form-group">
               <%= label DeviceAttribute, :set_value %>
             </div>
           </div>
 
-          <div class="col-xs-2">
+          <div class="col-sm-2">
             <div class="form-group">
               <%= label DeviceAttribute, :current_value %>
             </div>
@@ -79,13 +79,13 @@
           <div class="device-attribute" data-id="<%= device_attribute.id %>">
             <div class="row">
 
-              <div class="col-xs-2">
+              <div class="col-sm-2">
                 <div class="form-group">
                   <span class="device-attribute-name"><%= device_attribute.name %></span>
                 </div>
               </div>
 
-              <div class="col-xs-2">
+              <div class="col-sm-2">
                 <div class="form-group">
                   <% DeviceAttribute::PRIMITIVE_TYPES.each do |key, value| %>
                     <% if value[:ID] == device_attribute.primitive_type_c_id %>
@@ -96,19 +96,19 @@
                 </div>
               </div>
 
-              <div class="col-xs-2">
+              <div class="col-sm-2">
                 <div class="form-group">
                   <span class="device-attribute-min-value"><%= device_attribute.min_value.nil? ? '-' : device_attribute.min_value %></span>
                 </div>
               </div>
 
-              <div class="col-xs-2">
+              <div class="col-sm-2">
                 <div class="form-group">
                   <span class="device-attribute-max-value"><%= device_attribute.max_value.nil? ? '-' : device_attribute.max_value %></span>
                 </div>
               </div>
 
-              <div class="col-xs-2">
+              <div class="col-sm-2">
                 <div class="form-group">
                   <% if (device_attribute.direction_c_id == DeviceAttribute::DIRECTIONS[:SIGNALING_AND_FEEDBACK][:ID]) || (device_attribute.direction_c_id == DeviceAttribute::DIRECTIONS[:SIGNALING_ONLY][:ID]) %>
                     <% params = ActiveSupport::JSON.encode({ device_uid: device_attribute.device_uid.to_s }) %>
@@ -121,7 +121,7 @@
                 </div>
               </div>
 
-              <div class="col-xs-2">
+              <div class="col-sm-2">
                 <div class="form-group">
                   <span class="device-attribute-current-value"><%= compute_device_attribute_last_update_time_text(device_attribute.current_value, device_attribute.unit, device_attribute.updated_at) %></span>
                 </div>
@@ -175,19 +175,19 @@
 
         <div class="row">
 
-          <div class="col-xs-3">
+          <div class="col-sm-3">
             <%= stat.stat_name %>:
           </div>
 
-          <div class="col-xs-3">
+          <div class="col-sm-3">
             <%= stat.value %>
           </div>
 
-          <div class="col-xs-3">
+          <div class="col-sm-3">
             <%= stat.last_update_at %>
           </div>
 
-          <div class="col-xs-3">
+          <div class="col-sm-3">
             <%= stat.label %>
           </div>
 
