--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -31,19 +31,19 @@
     <%= schedule_form.hidden_field :id %>
 
     <div class="row">
-      <div class="col-xs-4">
+      <div class="col-sm-4">
         <div class="form-group">
           <%= schedule_form.label :title %>
           <%= schedule_form.text_field :title, class: 'form-control' %>
         </div>
       </div>
-      <div class="col-xs-6">
+      <div class="col-sm-6">
         <div class="form-group">
           <%= schedule_form.label :description %>
           <%= schedule_form.text_field :description, class: 'form-control' %>
         </div>
       </div>
-      <div class="col-xs-2">
+      <div class="col-sm-2">
         <div class="form-group">
           <%= schedule_form.label :priority %>
           <%= schedule_form.text_field :priority, class: 'form-control' %>
@@ -52,7 +52,7 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-6">
+      <div class="col-sm-6">
         <div class="form-group">
           <%= schedule_form.label :start_datetime %>
           <div class="input-group">
@@ -63,7 +63,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-6">
+      <div class="col-sm-6">
         <div class="form-group">
           <%= schedule_form.label :end_datetime %>
           <div class="input-group">
@@ -77,7 +77,7 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-sm-12">
         <%= schedule_form.check_box :is_recurrent %>
         <%= schedule_form.label :is_recurrent %>
       </div>
@@ -85,13 +85,13 @@
 
     <div id="recurrent-entries" class="hidden">
       <div class="row">
-        <div class="col-xs-4">
+        <div class="col-sm-4">
           <div class="form-group">
             <%= schedule_form.label :recurrence_period %>
             <%= schedule_form.text_field :recurrence_period, class: 'form-control' %>
           </div>
         </div>
-        <div class="col-xs-4">
+        <div class="col-sm-4">
           <div class="form-group">
             <%= schedule_form.label :repeat_every %>
             <%= schedule_form.select(:repeat_every, {}, { include_blank: '- Select period -' }, { class: 'form-control' }) do %>
@@ -108,22 +108,22 @@
       <h3>Overlapping Schedules</h3>
       <div class="overlapping-schedules-header">
         <div class="row">
-          <div class="col-xs-3">
+          <div class="col-sm-3">
             <div class="form-group">
               <%= label_tag 'Name' %>
             </div>
           </div>
-          <div class="col-xs-3">
+          <div class="col-sm-3">
             <div class="form-group">
               <%= label_tag 'Start Datetime' %>
             </div>
           </div>
-          <div class="col-xs-3">
+          <div class="col-sm-3">
             <div class="form-group">
               <%= label_tag 'End Datetime' %>
             </div>
           </div>
-          <div class="col-xs-3">
+          <div class="col-sm-3">
             <div class="form-group">
               <%= label_tag 'Priority' %>
             </div>
@@ -143,12 +143,12 @@
 
     <div id="add-new-event-to-schedule-container">
       <div class="row">
-        <div class="col-xs-6">
+        <div class="col-sm-6">
           <div class="form-group">
             <%= select(ScheduleEvent, :device_uid, [], {}, { id: 'schedule-event-device-selector', name: nil, class: 'form-control' }) %>
           </div>
         </div>
-        <div class="col-xs-6">
+        <div class="col-sm-6">
           <div class="form-group">
             <button type="button" class="action-button active add-new-event-to-schedule form-control">
               <span class="glyphicon glyphicon-plus"></span>
@@ -182,22 +182,22 @@
 
         <input class="schedule-id" type="hidden">
 
-        <div class="col-xs-3">
+        <div class="col-sm-3">
           <div class="form-group">
             <span class="schedule-title"></span>
           </div>
         </div>
-        <div class="col-xs-3">
+        <div class="col-sm-3">
           <div class="form-group">
             <span class="schedule-start-datetime"></span>
           </div>
         </div>
-        <div class="col-xs-3">
+        <div class="col-sm-3">
           <div class="form-group">
             <span class="schedule-end-datetime"></span>
           </div>
         </div>
-        <div class="col-xs-3">
+        <div class="col-sm-3">
           <div class="form-group">
             <input class="form-control schedule-priority" type="text">
           </div>
