--- a/app/views/schedules/index-old.html.erb
+++ b/app/views/schedules/index-old.html.erb
@@ -3,10 +3,10 @@
 </div>
 
 <div class="row">
-  <div class="col-xs-4"><b>Title</b></div>
-  <div class="col-xs-3"><b>Start Datetime</b></div>
-  <div class="col-xs-3"><b>End Datetime</b></div>
-  <div class="col-xs-2"><b>Actions</b></div>
+  <div class="col-sm-4"><b>Title</b></div>
+  <div class="col-sm-3"><b>Start Datetime</b></div>
+  <div class="col-sm-3"><b>End Datetime</b></div>
+  <div class="col-sm-2"><b>Actions</b></div>
 </div>
 
 <hr/>
@@ -14,11 +14,11 @@
 <% @schedules.each do |schedule| %>
 
   <div class="row">
-    <div class="col-xs-4"><%= schedule.title %></div>
-    <div class="col-xs-3"><%= schedule.start_datetime %></div>
-    <div class="col-xs-3"><%= schedule.end_datetime %></div>
+    <div class="col-sm-4"><%= schedule.title %></div>
+    <div class="col-sm-3"><%= schedule.start_datetime %></div>
+    <div class="col-sm-3"><%= schedule.end_datetime %></div>
 
-    <div class="col-xs-2">
+    <div class="col-sm-2">
       <%= link_to(schedule) do %>
         <span class="glyphicon glyphicon-zoom-in"></span>
       <% end %> |
