--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -36,39 +36,39 @@
 
       <div id="device-attributes-header">
         <div class="row">
-          <div class="col-sm-2">
+          <div class="col-md-2">
             <div class="form-group">
-              <%= label DeviceAttribute, :name, 'Prop Name' %>
+              <%= label DeviceAttribute, :name, DeviceAttribute.human_attribute_name(:name) %>
             </div>
           </div>
 
-          <div class="col-sm-2">
+          <div class="col-md-2">
             <div class="form-group">
-              <%= label DeviceAttribute, :primitive_type_c_id %>
+              <%= label DeviceAttribute, :primitive_type_c_id, DeviceAttribute.human_attribute_name(:primitive_type_c_id) %>
             </div>
           </div>
 
-          <div class="col-sm-2">
+          <div class="col-md-2">
             <div class="form-group">
-              <%= label DeviceAttribute, :min_value %>
+              <%= label DeviceAttribute, :min_value, DeviceAttribute.human_attribute_name(:min_value) %>
             </div>
           </div>
 
-          <div class="col-sm-2">
+          <div class="col-md-2">
             <div class="form-group">
-              <%= label DeviceAttribute, :max_value %>
+              <%= label DeviceAttribute, :max_value, DeviceAttribute.human_attribute_name(:max_value) %>
             </div>
           </div>
 
-          <div class="col-sm-2">
+          <div class="col-md-2">
             <div class="form-group">
-              <%= label DeviceAttribute, :set_value %>
+              <%= label DeviceAttribute, :set_value, DeviceAttribute.human_attribute_name(:set_value) %>
             </div>
           </div>
 
-          <div class="col-sm-2">
+          <div class="col-md-2">
             <div class="form-group">
-              <%= label DeviceAttribute, :current_value %>
+              <%= label DeviceAttribute, :current_value, DeviceAttribute.human_attribute_name(:current_value) %>
             </div>
           </div>
         </div>
@@ -79,41 +79,41 @@
           <div class="device-attribute" data-id="<%= device_attribute.id %>">
             <div class="row">
 
-              <div class="col-sm-2">
+              <div class="col-md-2">
                 <div class="form-group">
-                  <span class="device-attribute-name"><%= device_attribute.name %></span>
+                  <span data-label="<%= DeviceAttribute.human_attribute_name(:name) %>" class="device-attribute-name"><%= device_attribute.name %></span>
                 </div>
               </div>
 
-              <div class="col-sm-2">
+              <div class="col-md-2">
                 <div class="form-group">
                   <% DeviceAttribute::PRIMITIVE_TYPES.each do |key, value| %>
                     <% if value[:ID] == device_attribute.primitive_type_c_id %>
-                      <span class="device-attribute-primitve-type-text"><%= value[:LABEL] %></span>
+                      <span data-label="<%= DeviceAttribute.human_attribute_name(:primitive_type_c_id) %>" class="device-attribute-primitve-type-text"><%= value[:LABEL] %></span>
                       <% break %>
                     <% end %>
                   <% end %>
                 </div>
               </div>
 
-              <div class="col-sm-2">
+              <div class="col-md-2">
                 <div class="form-group">
-                  <span class="device-attribute-min-value"><%= device_attribute.min_value.nil? ? '-' : device_attribute.min_value %></span>
+                  <span data-label="<%= DeviceAttribute.human_attribute_name(:min_value) %>" class="device-attribute-min-value"><%= device_attribute.min_value.nil? ? '-' : device_attribute.min_value %></span>
                 </div>
               </div>
 
-              <div class="col-sm-2">
+              <div class="col-md-2">
                 <div class="form-group">
-                  <span class="device-attribute-max-value"><%= device_attribute.max_value.nil? ? '-' : device_attribute.max_value %></span>
+                  <span data-label="<%= DeviceAttribute.human_attribute_name(:max_value) %>" class="device-attribute-max-value"><%= device_attribute.max_value.nil? ? '-' : device_attribute.max_value %></span>
                 </div>
               </div>
 
-              <div class="col-sm-2">
+              <div class="col-md-2">
                 <div class="form-group">
                   <% if (device_attribute.direction_c_id == DeviceAttribute::DIRECTIONS[:SIGNALING_AND_FEEDBACK][:ID]) || (device_attribute.direction_c_id == DeviceAttribute::DIRECTIONS[:SIGNALING_ONLY][:ID]) %>
                     <% params = ActiveSupport::JSON.encode({ device_uid: device_attribute.device_uid.to_s }) %>
                     <a href="#" class="editable-device-attribute-set-value" data-params="<%= params %>" data-pk="<%= device_attribute.id %>" data-name="set_value" data-url="<%= url_for(action: 'update_device_attribute_value', controller: '/devices') %>">
-                      <span class="device-attribute-set-value"><%= device_attribute.set_value.nil? ? '-' : device_attribute.set_value %></span>
+                      <span data-label="<%= DeviceAttribute.human_attribute_name(:set_value) %>" class="device-attribute-set-value"><%= device_attribute.set_value.nil? ? '-' : device_attribute.set_value %></span>
                     </a>
                   <% else %>
                     -
@@ -121,9 +121,9 @@
                 </div>
               </div>
 
-              <div class="col-sm-2">
+              <div class="col-md-2">
                 <div class="form-group">
-                  <span class="device-attribute-current-value"><%= compute_device_attribute_last_update_time_text(device_attribute.current_value, device_attribute.unit, device_attribute.updated_at) %></span>
+                  <span data-label="<%= DeviceAttribute.human_attribute_name(:current_value) %>" class="device-attribute-current-value"><%= compute_device_attribute_last_update_time_text(device_attribute.current_value, device_attribute.unit, device_attribute.updated_at) %></span>
                 </div>
               </div>
 
@@ -175,19 +175,19 @@
 
         <div class="row">
 
-          <div class="col-sm-3">
+          <div class="col-md-3">
             <%= stat.stat_name %>:
           </div>
 
-          <div class="col-sm-3">
+          <div class="col-md-3">
             <%= stat.value %>
           </div>
 
-          <div class="col-sm-3">
+          <div class="col-md-3">
             <%= stat.last_update_at %>
           </div>
 
-          <div class="col-sm-3">
+          <div class="col-md-3">
             <%= stat.label %>
           </div>
 
