Fix responsive device attributes view

--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -28,11 +28,11 @@
 
 <!-- DEVICE ATTRIBUTES -->
 <% if @device.device_attributes.any? %>
-  <div class="panel panel-default">
+  <div class="panel panel-default responsive-table-container">
     <div class="panel-heading">
       <h3 class="panel-title">Device Attributes</h3>
     </div>
-    <div class="panel-body">
+    <div class="panel-body responsive-table">
 
       <div id="device-attributes-header">
         <div class="row">
@@ -79,41 +79,41 @@
           <div class="device-attribute" data-id="<%= device_attribute.id %>">
             <div class="row">
 
-              <div class="col-md-2">
+              <div data-label="<%= DeviceAttribute.human_attribute_name(:name) %>" class="col-md-2">
                 <div class="form-group">
-                  <span data-label="<%= DeviceAttribute.human_attribute_name(:name) %>" class="device-attribute-name"><%= device_attribute.name %></span>
+                  <span class="device-attribute-name"><%= device_attribute.name %></span>
                 </div>
               </div>
 
-              <div class="col-md-2">
+              <div data-label="<%= DeviceAttribute.human_attribute_name(:primitive_type_c_id) %>" class="col-md-2">
                 <div class="form-group">
                   <% DeviceAttribute::PRIMITIVE_TYPES.each do |key, value| %>
                     <% if value[:ID] == device_attribute.primitive_type_c_id %>
-                      <span data-label="<%= DeviceAttribute.human_attribute_name(:primitive_type_c_id) %>" class="device-attribute-primitve-type-text"><%= value[:LABEL] %></span>
+                      <span class="device-attribute-primitve-type-text"><%= value[:LABEL] %></span>
                       <% break %>
                     <% end %>
                   <% end %>
                 </div>
               </div>
 
-              <div class="col-md-2">
+              <div data-label="<%= DeviceAttribute.human_attribute_name(:min_value) %>" class="col-md-2">
                 <div class="form-group">
-                  <span data-label="<%= DeviceAttribute.human_attribute_name(:min_value) %>" class="device-attribute-min-value"><%= device_attribute.min_value.nil? ? '-' : device_attribute.min_value %></span>
+                  <span class="device-attribute-min-value"><%= device_attribute.min_value.nil? ? '-' : device_attribute.min_value %></span>
                 </div>
               </div>
 
-              <div class="col-md-2">
+              <div data-label="<%= DeviceAttribute.human_attribute_name(:max_value) %>" class="col-md-2">
                 <div class="form-group">
-                  <span data-label="<%= DeviceAttribute.human_attribute_name(:max_value) %>" class="device-attribute-max-value"><%= device_attribute.max_value.nil? ? '-' : device_attribute.max_value %></span>
+                  <span class="device-attribute-max-value"><%= device_attribute.max_value.nil? ? '-' : device_attribute.max_value %></span>
                 </div>
               </div>
 
-              <div class="col-md-2">
+              <div data-label="<%= DeviceAttribute.human_attribute_name(:set_value) %>" class="col-md-2">
                 <div class="form-group">
                   <% if (device_attribute.direction_c_id == DeviceAttribute::DIRECTIONS[:SIGNALING_AND_FEEDBACK][:ID]) || (device_attribute.direction_c_id == DeviceAttribute::DIRECTIONS[:SIGNALING_ONLY][:ID]) %>
                     <% params = ActiveSupport::JSON.encode({ device_uid: device_attribute.device_uid.to_s }) %>
-                    <a href="#" class="editable-device-attribute-set-value" data-params="<%= params %>" data-pk="<%= device_attribute.id %>" data-name="set_value" data-url="<%= url_for(action: 'update_device_attribute_value', controller: '/devices') %>">
-                      <span data-label="<%= DeviceAttribute.human_attribute_name(:set_value) %>" class="device-attribute-set-value"><%= device_attribute.set_value.nil? ? '-' : device_attribute.set_value %></span>
+                    <a href="#" class="device-attribute-set-value editable-device-attribute-set-value" data-params="<%= params %>" data-pk="<%= device_attribute.id %>" data-name="set_value" data-url="<%= url_for(action: 'update_device_attribute_value', controller: '/devices') %>">
+                      <%= device_attribute.set_value %>
                     </a>
                   <% else %>
                     -
@@ -121,9 +121,9 @@
                 </div>
               </div>
 
-              <div class="col-md-2">
+              <div data-label="<%= DeviceAttribute.human_attribute_name(:current_value) %>" class="col-md-2">
                 <div class="form-group">
-                  <span data-label="<%= DeviceAttribute.human_attribute_name(:current_value) %>" class="device-attribute-current-value"><%= compute_device_attribute_last_update_time_text(device_attribute.current_value, device_attribute.unit, device_attribute.updated_at) %></span>
+                  <span class="device-attribute-current-value"><%= compute_device_attribute_last_update_time_text(device_attribute.current_value, device_attribute.unit, device_attribute.updated_at) %></span>
                 </div>
               </div>
 
