--- a/app/assets/stylesheets/devices.scss
+++ b/app/assets/stylesheets/devices.scss
@@ -1,3 +1,35 @@
-// Place all the styles related to the devices controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@media screen and (max-width: 991px) {
+  .responsive-table {
+    padding: 0 15px;
+    #device-attributes-header {
+      display: none;
+    }
+    .row {
+      margin-bottom: 10px;
+      display: block;
+      border: 1px solid #ddd;
+      //border-bottom: 2px solid #ddd;
+      .col-md-2 {
+        display: block;
+        text-align: right;
+        font-size: 13px;
+        border-bottom: 1px dotted #ccc;
+        &:before {
+          content: attr(data-label);
+          float: left;
+          font-weight: bold;
+        }
+        &:last-child {
+          border-bottom: 0;
+        }
+        .form-group {
+          margin: 15px 0;
+        }
+      }
+    }
+  }
+}
+
+.responsive-table-container.panel-default {
+  border: none;
+}
